# engine3d-audio

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  conanfile.py
.cache/clangd/index/: helper-functions.cpp.0DC431ABE996E884.idx  miniaudio.cpp.5E1FBA7C9E030F59.idx  miniaudio.h.C8E533871F53C4AF.idx  miniaudio_engine.h.C3E0C515CAC9DADC.idx
audio/: decoder.h  helper-functions.h
audio/internal/: miniaudio.h  miniaudio_engine.h
demo/: CMakeLists.txt  application.cpp
src/: CMakeLists.txt
src/audio/: decoder.cpp
src/audio/internal/: miniaudio.cpp
test_package/: Application.cpp  CMakeLists.txt  CMakeUserPresets.json  conanfile.py  device-example.cpp  play_sound.cpp
